<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MeetingCreation.MeetingCreationFragment"
    android:id="@+id/meeting_creation_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- INFOS -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/infos_title"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_subject_input">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_meeting_creation_subject_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_meeting_creation_date_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_date_range_black_24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_meeting_creation_time_start_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_access_time_black_24dp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_meeting_creation_time_stop_button"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:icon="@drawable/ic_access_time_black_24dp" />
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- MEETING ROOM -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/meeting_room_title"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/fragment_meeting_creation_meeting_room_spinner"
                        style="@style/Widget.AppCompat.Spinner.Underlined"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:spinnerMode="dialog"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- PARTICIPANTS -->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:padding="10dp"
                    android:text="@string/participants_title"
                    android:textColor="@android:color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/participants_title">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fragment_meeting_creation_add_participant_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/fragment_meeting_creation_add_participant_button"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="ajouter"
                        app:icon="@drawable/ic_add_white_24dp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/fragment_meeting_creation_participants_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>