<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <item
        android:id="@+id/menu_meeting_creation_save"
        android:icon="@drawable/ic_done_white_24dp"
        android:title="@string/back_button_title"
        app:showAsAction="ifRoom" />
</menu>