<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MeetingsList.MeetingsListFragment"
    android:id="@+id/fragment_meetings_list">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragment_meetings_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</ScrollView>